--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@ main {
     width: 100vw;
     margin: 0px;
     background-color: #69302c;
+    background-image: linear-gradient(rgba(255,255,255,0), rgba(0,0,0,0.65));
 }
+
+
 
 body:not([data-nav="true"]) > #nav-toggle:hover > .open {
     opacity: 1;
@@ -38,14 +41,14 @@ body[data-nav="true"] > nav > #nav-links {
 
 
 main {
-    background-image: url(./img/Background-image.jpg);
+    background-image: url(/img/Background-image.jpg);
     background-size: cover;
     background-position: center 0%; 
     height: 100vh;
     width: 100vw;
     position: relative;
     z-index: 2;
-    animation:2s ease-out 2s forwards;
+    transition: ease 2s;
 }
 
 #nav-toggle {
@@ -62,7 +65,7 @@ main {
     outline: none;
     box-shadow: 0rem 0rem 4rem rgba(0 0 0 / 35%);
     cursor: pointer;
-    transition: transform 1s ease, top 1s ease background-color;
+    transition: ease 1s, top ease 1s;
     transition-timing-function: ease;
     transition-duration: 400ms;
 }
@@ -80,10 +83,126 @@ main {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%) scale(0.9);
-    color: #8ba6bc;
+    color: White;
     font-size: 1.75rem;
     opacity: 0;
-    transition: transform, opacity; 
     transition-timing-function: ease;
     transition-duration: 400ms;
+}
+
+#menu-button, #close-button {
+    width: 100%;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(241deg) brightness(103%) contrast(103%);
+    transform: translateY(10%);
+}
+
+H1, H2{
+    margin:0px;
+    padding:0px;
+    text-align:center;
+    color:White;
+    text-shadow: -1px 1px 2px #000,
+    1px 1px 2px #000,
+    1px -1px 0 #000,
+    -1px -1px 0 #000;
+} 
+
+H1 {
+    font-size: 70px;
+}
+
+H2 {
+    font-size: 50px;
+    padding-left: 2%;
+}
+
+header {
+    padding-top: 3vh;
+}
+
+section {
+    padding: 5vh;
+} 
+
+p, li, form {
+    text-align:center;
+    font-size: 20px;
+    color:White;
+    text-shadow: -1px 1px 2px #000,
+    1px 1px 2px #000,
+    1px -1px 0 #000,
+    -1px -1px 0 #000;
+}
+
+ul {
+    list-style-type: none;
+}
+
+content {
+    margin: auto;
+}
+
+nav {
+    height: 50vh;
+    width: 100%;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    z-index: 1;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav a {
+    color: #f8bc00;
+    text-decoration: none;
+    padding-top: 10%;
+    margin: 5vw;
+    font-size: 35px;
+}
+
+nav a:hover {
+    color: #da7b08;
+}
+
+a {
+    color: #f8bc00;
+    text-decoration: none;
+}
+
+form {
+    width: 60vw;
+    background-color: #8ba6bc;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    border-color: #404664;
+    border-width: 4px;
+    border-style: solid;
+}
+
+#submit {
+    margin-top: 2vh;
+}
+
+#filled-form {
+    color: #17e343;
+}
+
+@media(max-width: 600px) {
+    nav {
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    nav a {
+        padding-top: 0%;
+        margin: 2vw;
+    }
+
+    body:not([data-nav="true"]) > #nav-toggle > .open {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
 }
